--- a/arch/arm/dts/sunxi-u-boot.dtsi
+++ b/arch/arm/dts/sunxi-u-boot.dtsi
@@ -1,10 +1,11 @@
 #include <config.h>
 
 / {
+/* This good for nothing
 	aliases {
 		mmc1 = &mmc2;
 	};
-
+*/
 	binman {
 		filename = "u-boot-sunxi-with-spl.bin";
 		pad-byte = <0xff>;
