sunxi: Force not to use the LZO compression.

--- a/configs/licheepi_nano_spinand_defconfig
+++ b/configs/licheepi_nano_spinand_defconfig
@@ -38,3 +38,7 @@ CONFIG_NAND_SUNXI=y
 CONFIG_SYS_NAND_BLOCK_SIZE=0x20000
 CONFIG_SYS_NAND_PAGE_SIZE=0x800
 CONFIG_SYS_NAND_OOBSIZE=0x40
+
+# Force not to use the LZO compression.
+CONFIG_LZO=n
+CONFIG_CMD_UBI=n
