--- a/configs/licheepi_nano_spinand_defconfig
+++ b/configs/licheepi_nano_spinand_defconfig
@@ -2,6 +2,7 @@ CONFIG_ARM=y
 CONFIG_ARCH_SUNXI=y
 CONFIG_ENV_SIZE=0x8000
 CONFIG_ENV_OFFSET=0xf8000
+CONFIG_SYS_TEXT_BASE=0x80000000
 CONFIG_MACH_SUNIV=y
 CONFIG_DRAM_CLK=156
 CONFIG_DRAM_ZQ=0
