sunxi: re-formatted

--- a/configs/licheepi_nano_spinand_defconfig
+++ b/configs/licheepi_nano_spinand_defconfig
@@ -1,44 +1,53 @@
 CONFIG_ARM=y
 CONFIG_ARCH_SUNXI=y
-CONFIG_ENV_SIZE=0x8000
-CONFIG_ENV_OFFSET=0xf8000
-CONFIG_SYS_TEXT_BASE=0x80000000
+
+CONFIG_ENV_IS_NOWHERE=y
+CONFIG_ENV_IS_IN_FAT=n
+
+CONFIG_SYS_TEXT_BASE=0x81700000
+
 CONFIG_MACH_SUNIV=y
 CONFIG_DRAM_CLK=156
 CONFIG_DRAM_ZQ=0
+
 # CONFIG_VIDEO_SUNXI is not set
 CONFIG_DEFAULT_DEVICE_TREE="suniv-f1c100s-licheepi-nano"
+
+# SPL STUFFS
 CONFIG_SPL=y
+CONFIG_SPL_SPI_SUNXI=y
+
 # CONFIG_CMD_FLASH is not set
 # CONFIG_CMD_FPGA is not set
-CONFIG_CMD_SF=y
-CONFIG_CMD_SPI=y
-CONFIG_ENV_IS_IN_SPI_FLASH=y
-CONFIG_DM_SPI_FLASH=y
-CONFIG_SPI_FLASH=y
-CONFIG_SPI_FLASH_BAR=y
-CONFIG_SPI_FLASH_GIGADEVICE=y
-CONFIG_SPI_FLASH_MACRONIX=y
-CONFIG_SPI_FLASH_WINBOND=y
-CONFIG_SPL_SPI_SUNXI=y
-# CONFIG_SPL_DM_SERIAL is not set
-CONFIG_DM_SPI=y
-CONFIG_SUN6I_SPI=y
 
-# NAND STUFFS
-CONFIG_SPL_NAND_SUPPORT=y
-CONFIG_CMD_NAND=y
+#SPI STUFFS
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_SPI_SUNXI=y
-CONFIG_MTD=y
-CONFIG_MTD_SPI_NAND=y
-CONFIG_NAND=y
-CONFIG_NAND_SUNXI=y
+CONFIG_CMD_SPI=y
 
-CONFIG_SYS_NAND_BLOCK_SIZE=0x20000
-CONFIG_SYS_NAND_PAGE_SIZE=0x800
-CONFIG_SYS_NAND_OOBSIZE=0x40
+# (SPI)FLASH STUFFS
+CONFIG_DM_SPI_FLASH=y
+CONFIG_SPI_FLASH=y
+CONFIG_SPI_FLASH_BAR=y
+CONFIG_SPI_FLASH_WINBOND=y
+CONFIG_CMD_SF=y
+
+# MTD STUFFS
+CONFIG_MTD=y
+CONFIG_DM_MTD=y
+CONFIG_MTD_SPI_NAND=y
+CONFIG_CMD_MTD=y
+
+# NAND STUFFS
+#CONFIG_SPL_NAND_SUPPORT=y
+#CONFIG_CMD_NAND=y
+#CONFIG_NAND=y
+#CONFIG_NAND_SUNXI=y
+
+#CONFIG_SYS_NAND_BLOCK_SIZE=0x20000
+#CONFIG_SYS_NAND_PAGE_SIZE=0x800
+#CONFIG_SYS_NAND_OOBSIZE=0x40
 
 # Force not to use the LZO compression.
 CONFIG_LZO=n
