modified:   arch/arm/dts/suniv-f1c100s-licheepi-nano.dts 	modified:   arch/arm/dts/suniv.dtsi 	modified:   arch/arm/mach-sunxi/board.c 	modified:   arch/arm/mach-sunxi/spl_spi_sunxi.c 	modified:   configs/licheepi_nano_spinand_defconfig 	modified:   include/configs/suniv.h 	modified:   include/configs/sunxi-common.h

--- a/arch/arm/dts/suniv.dtsi
+++ b/arch/arm/dts/suniv.dtsi
@@ -84,7 +84,7 @@
 			clocks = <&ccu CLK_BUS_SPI0>, <&ccu CLK_BUS_SPI0>;
 			clock-names = "ahb", "mod";
 			resets = <&ccu RST_BUS_SPI0>;
-			status = "disabled";
+			status = "okay";
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
