--- a/arch/arm/dts/suniv-f1c100s-licheepi-nano.dts
+++ b/arch/arm/dts/suniv-f1c100s-licheepi-nano.dts
@@ -32,12 +32,40 @@
 	pinctrl-0 = <&spi0_pins_a>;
 	status = "okay";
 
-	spi-nand@0 {
+	NAND:W25N01GV@0 {
 		#address-cells = <1>;
 		#size-cells = <1>;
-		compatible = "spi-nand";
+		compatible = "spi-nand","allwinner,sun4i-a10-nand";
 		reg = <0>;
-		spi-max-frequency = <40000000>;
+		spi-max-frequency = <6000000>;
+ 		partitions {
+            		compatible = "fixed-partitions";
+            		#address-cells = <1>;
+            		#size-cells = <1>;
+
+            		partition@0 {
+                		label = "u-boot";
+                		reg = <0x000000 0x100000>;
+                		read-only;
+            		};
+
+            		partition@100000 {
+                		label = "dtb";
+                		reg = <0x100000 0x10000>;
+                		read-only;
+            		};
+
+            		partition@110000 {
+                		label = "kernel";
+                		reg = <0x110000 0x400000>;
+                		read-only;
+           		 };
+
+            		partition@510000 {
+                		label = "rootfs";
+                		reg = <0x510000 0xAF0000>;
+            		};
+        	};
 	};
 };
 
