--- a/arch/arm/dts/suniv-f1c100s-licheepi-nano.dts
+++ b/arch/arm/dts/suniv-f1c100s-licheepi-nano.dts
@@ -47,26 +47,13 @@
 	pinctrl-0 = <&spi1_pins_a>;
 	status = "okay";
 
-	panel:panel{
+	display@0{
 		compatible = "sharp-memlcd";
 		#address-cells = <1>;
 		#size-cells = <1>;
 		SCS-Pin = <&pio 4 11 0>; /* PE11 for SCS, Default state : LOW */
-		spi-max-frequency = <1500000>; //1MHz for Sharp memory LCD
-
-		backlight {
-			compatible = "pwm-backlight";
-			pwms = <&pwm 1 500000 0>;
-			brightness-levels = <0 4 8 16 32 64 128 255>;
-			default-brightness-level = <6>;
-
-			reg_vcc3v3: vcc3v3 {
-				compatible = "regulator-fixed";
-				regulator-name = "vcc3v3";
-				regulator-min-microvolt = <3300000>;
-				regulator-max-microvolt = <3300000>;
-			};
-		};
+		spi-max-frequency = <1500000>; //1.5MHz for Sharp memory LCD
+		memlcd-pwm = <&pwm0 1 500000>;
 	};
 
 
@@ -85,5 +72,11 @@
 
 &usbphy {
 	usb0_id_det-gpio = <&pio 4 2 GPIO_ACTIVE_HIGH>; /* PE2 */
+	status = "okay";
+};
+
+&pwm0 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pwm0_pins>;
 	status = "okay";
 };
