suniv: Included mtdparts for spi nand partition
Signed-off-by: TiNredmc <thipok17@gmail.com>

--- a/configs/licheepi_nano_spinand_defconfig
+++ b/configs/licheepi_nano_spinand_defconfig
@@ -39,6 +39,7 @@ CONFIG_MTD=y
 CONFIG_DM_MTD=y
 CONFIG_MTD_SPI_NAND=y
 CONFIG_CMD_MTD=y
+CONFIG_CMD_MTDPARTS=y
 
 
 # Force not to use the LZO compression.
