--- a/arch/arm/dts/suniv-f1c100s-licheepi-nano.dts
+++ b/arch/arm/dts/suniv-f1c100s-licheepi-nano.dts
@@ -16,11 +16,12 @@
 	aliases {
 		serial0 = &uart0;
 		spi0 = &spi0;
-		spi1 = &spi1;
+//		spi1 = &spi1;
 	};
 
 	chosen {
 		stdout-path = "serial0:115200n8";
+		bootargs = "console=ttyS0,115200 panic=5 earlyprintk mtdids:spi-nand0=nand0.0 mtdparts:mtdparts=nand0.0:512k(uboot)ro,128k(dtb)ro,4096K(kernel)ro,-@0x4A0000(rootfs) rootwait root=31:03 rw rootfstype=jffs2";
 	};
 };
 
@@ -42,21 +43,21 @@
         	};
 };
 
-&spi1 {
-	pinctrl-names = "default1";
-	pinctrl-0 = <&spi1_pins_a>;
-	status = "okay";
-
-	display@0{
-		#address-cells = <2>;
-		#size-cells = <5>;
-		compatible = "sharp,sharp-memlcd";
-		SCS-Pin = <&pio 4 11 0>; /* PE11 for SCS, Default state : LOW */
-		spi-max-frequency = <1500000>; //1.5MHz for Sharp memory LCD
-		memlcd-pwm = <&pwm0 0 500000>;
-	};
-
-};
+//&spi1 {
+//	pinctrl-names = "default1";
+//	pinctrl-0 = <&spi1_pins_a>;
+//	status = "okay";
+//
+//	display@0{
+//		#address-cells = <2>;
+//		#size-cells = <5>;
+//		compatible = "sharp,sharp-memlcd";
+//		SCS-Pin = <&pio 4 11 0>; /* PE11 for SCS, Default state : LOW */
+//		spi-max-frequency = <1500000>; //1.5MHz for Sharp memory LCD
+//		memlcd-pwm = <&pwm0 0 500000>;
+//	};
+//
+//};
 
 &uart0 {
 	pinctrl-names = "default";
